@@ -42,6 +42,11 @@ class GeneralTests(TestCase):
         telnet = telnetlib.Telnet(HOST, self.port)
         telnet.sock.close()
 
+    def testContextManager(self):
+        with telnetlib.Telnet(HOST, self.port) as tn:
+            self.assertIsNotNone(tn.get_socket())
+        self.assertIsNone(tn.get_socket())
+
     def testTimeoutDefault(self):
         self.assertTrue(socket.getdefaulttimeout() is None)
         socket.setdefaulttimeout(30)
